auth servisi güncellendi. kullanıcıların adres işlemleri eklendi.
